<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="gitmad.gitmadheatmap.RegistrationActivity"
    tools:showIn="@layout/activity_registration">

    <TextView
        android:id="@+id/create_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textSize="30sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/first_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:labelFor="@+id/first_name_entry"
        android:text="@string/first_name"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="100dp" />

    <EditText
        android:id="@+id/first_name_entry"
        android:layout_width="154dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/middle_name_entry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/middle_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:labelFor="@+id/middle_name_entry"
        android:text="@string/middle_name"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="156dp" />

    <EditText
        android:id="@+id/middle_name_entry"
        android:layout_width="154dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/last_name_entry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/last_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:labelFor="@+id/last_name_entry"
        android:text="@string/last_name"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="216dp" />

    <EditText
        android:id="@+id/last_name_entry"
        android:layout_width="154dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/username_entry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/username_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:labelFor="@+id/username_entry"
        android:text="@string/username"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="276dp" />

    <EditText
        android:id="@+id/username_entry"
        android:layout_width="154dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/password_entry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:labelFor="@+id/password_entry"
        android:text="@string/prompt_password"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="339dp" />

    <EditText
        android:id="@+id/password_entry"
        android:layout_width="154dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="383dp" />

    <TextView
        android:id="@+id/email_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:labelFor="@+id/email_entry"
        android:text="@string/prompt_email"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="397dp" />

    <EditText
        android:id="@+id/email_entry"
        android:layout_width="154dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        app:layout_constraintBottom_toTopOf="@+id/first_name_entry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="447dp" />


</android.support.constraint.ConstraintLayout>
